[project]
name = "request-systems-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "pydantic[email]>=2.13.3",
    "pydantic-settings>=2.14.0",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "pwdlib[argon2]>=0.3.0",
    "databricks-sdk>=0.106.0",
    "databricks-sql-connector>=4.2.6",
    "databricks-sqlalchemy>=2.0.9",
]

[dependencies]
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
pydantic = "^2.13.3"
pydantic-settings = "^2.14.0"
sqlalchemy = "^2.0.49"

[tool.pyright]
venvPath = "."
venv = ".venv"
